--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -5,15 +5,15 @@
 	<groupId>nl.mpi</groupId>
 	<artifactId>arbil</artifactId>
 	<packaging>jar</packaging>
-	<version>2.4-pretesting-SNAPSHOT</version>
+	<version>2.4.28783-pretesting</version>
 	<name>Arbil</name>
 	<organization> 
 	<name>The Language Archive</name> 
 	<url>http://www.lat-mpi.eu/</url>
     </organization>
 	<scm>
-		<developerConnection>scm:svn:https://svn.mpi.nl/LAT/Arbil/trunk/arbil</developerConnection>
-		<url>https://trac.mpi.nl/wiki/Arbil</url>
+		<developerConnection>scm:svn:https://svn.mpi.nl/LAT/Arbil/tags/arbil-2.4.28783-pretesting</developerConnection>
+		<url>scm:svn:https://svn.mpi.nl/LAT/Arbil/tags/arbil-2.4.28783-pretesting</url>
 	</scm>
 	<properties>
 		<majorVersion>2</majorVersion>
@@ -96,8 +96,11 @@
 				<version>2.2.2</version>
 				<configuration>
 					<branchBase>https://svn.mpi.nl/LAT/Arbil/tags</branchBase>
+					<tagBase>https://svn.mpi.nl/LAT/Arbil/tags</tagBase>
 					<branchName>${majorVersion}.${minorVersion}.${buildNumber}-${arbilBranch}</branchName>
 					<releaseVersion>${majorVersion}.${minorVersion}.${buildNumber}-${arbilBranch}</releaseVersion>
+					<developmentVersion>${majorVersion}.${minorVersion}-${arbilBranch}</developmentVersion>
+					<scmCommentPrefix />
 					<checkModificationExcludes>
 						<param>ArbilVersion.java</param>
 						<param>pom.xml</param>
