Added installer as external. Modified pom, ArbilVersion and version.properties to work with generic installer script.

--- a/arbil/src/main/resources/version.properties
+++ b/arbil/src/main/resources/version.properties
@@ -1,8 +1,8 @@
-applicationTitle=${arbil.application-title}
-applicationIconName=/nl/mpi/arbil/resources/icons/arbil${arbil.branch}128x128.png
-currentMajor=${arbil.majorVersion}
-currentMinor=${arbil.minorVersion}
-currentRevision=${arbil.version.revision}
-lastCommitDate=${arbil.version.committedDate}
-compileDate=${arbil.build-date}
-currentVersionFile=http://www.mpi.nl/tg/j2se/jnlp/arbil/arbil${arbil.branch}-current.txt
+application.title=${arbil.application-title}
+application.iconName=arbil${arbil.branch}128x128.png
+application.majorVersion=${arbil.majorVersion}
+application.minorVersion=${arbil.minorVersion}
+application.revision=${arbil.version.revision}
+application.lastCommitDate=${arbil.version.committedDate}
+applicaiton.compileDate=${arbil.build-date}
+application.currentVersionFile=http://www.mpi.nl/tg/j2se/jnlp/arbil/arbil${arbil.branch}-current.txt
