--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -1,3 +1,4 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>nl.mpi</groupId>
@@ -15,12 +16,14 @@
     </scm>
     
     <properties>
-	<arbil.majorVersion>2</arbil.majorVersion>
-	<arbil.minorVersion>4</arbil.minorVersion>
+	<arbil.majorVersion>${application.majorVersion}</arbil.majorVersion>
+	<arbil.minorVersion>${application.minorVersion}</arbil.minorVersion>
 	<!-- For pretesting or testing, prefix with dash (e.g. -pretesting). For stable, leave blank -->
-	<arbil.branch>-pretesting</arbil.branch>
-	<arbil.application-title>Arbil (pretesting)</arbil.application-title>
+	<arbil.branch>${application.branch}</arbil.branch>
+	<arbil.application-title>${application.title}</arbil.application-title>
 	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	<output.jarname>${project.build.finalName}</output.jarname>
+	<output.directory>${project.build.directory}</output.directory>
     </properties>
     
     <build>
@@ -31,6 +34,24 @@
 	    </resource>
 	</resources>
 	<plugins>
+	    <plugin>
+		<groupId>org.codehaus.mojo</groupId>
+		<artifactId>properties-maven-plugin</artifactId>
+		<version>1.0-alpha-2</version>
+		<executions>
+		    <execution>
+			<phase>initialize</phase>
+			<goals>
+			    <goal>read-project-properties</goal>
+			</goals>
+			<configuration>
+			    <files>
+				<file>application.properties</file>
+			    </files>
+			</configuration>
+		    </execution>
+		</executions>
+	    </plugin>
 	    <plugin>
 		<groupId>org.apache.maven.plugins</groupId>
 		<artifactId>maven-compiler-plugin</artifactId>
@@ -45,6 +66,8 @@
 		<artifactId>maven-jar-plugin</artifactId>
 		<version>2.3.1</version>
 		<configuration>
+		    <finalName>${output.jarname}</finalName>
+                    <outputDirectory>${output.directory}</outputDirectory>
 		    <archive>
 			<manifest>
 			    <addClasspath>true</addClasspath>
@@ -78,6 +101,25 @@
 			<goals>
 			    <goal>run</goal>
 			</goals>
+		    </execution>
+		</executions>
+	    </plugin>
+	    <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-dependency-plugin</artifactId>
+		<executions>
+		    <execution>
+			<id>copy-dependencies</id>
+			<phase>package</phase>
+			<goals>
+			    <goal>copy-dependencies</goal>
+			</goals>
+			<configuration>
+			    <outputDirectory>${output.directory}/lib</outputDirectory>
+			    <overWriteReleases>false</overWriteReleases>
+			    <overWriteSnapshots>false</overWriteSnapshots>
+			    <overWriteIfNewer>true</overWriteIfNewer>
+			</configuration>
 		    </execution>
 		</executions>
 	    </plugin>
