Fixed issue with revision number in version properties

--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -119,6 +119,7 @@
 			    <overWriteReleases>false</overWriteReleases>
 			    <overWriteSnapshots>false</overWriteSnapshots>
 			    <overWriteIfNewer>true</overWriteIfNewer>
+			    <excludeArtifactIds>log4j</excludeArtifactIds>
 			</configuration>
 		    </execution>
 		</executions>
