--- a/arbil/src/main/resources/version.properties
+++ b/arbil/src/main/resources/version.properties
@@ -4,5 +4,5 @@ application.majorVersion=${arbil.majorVersion}
 application.minorVersion=${arbil.minorVersion}
 application.revision=${arbil.version.revision}
 application.lastCommitDate=${arbil.version.committedDate}
-applicaiton.compileDate=${arbil.build-date}
+application.compileDate=${arbil.build-date}
 application.currentVersionFile=http://www.mpi.nl/tg/j2se/jnlp/arbil/arbil${arbil.branch}-current.txt
