Specified jar outputdirectory in arbil pom

--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -67,6 +67,7 @@
 		<version>2.3.1</version>
 		<configuration>
 		    <finalName>${output.jarname}</finalName>
+		    <outputDirectory>${output.directory}</outputDirectory>
 		    <archive>
 			<manifest>
 			    <addClasspath>true</addClasspath>
