Moved version info from application.properties to pom.xml, so that 'mvn install' actually uses the correct artifactId (version string is created before properties plugin is run)

--- a/arbil/application.properties
+++ b/arbil/application.properties
@@ -1,22 +1,4 @@
 ####################################
-# Version info
-####################################
-
-# Major and minor version. Build number will come from SVN revision
-
-application.majorVersion=2
-application.minorVersion=4
-
-# Application title will be used inside the application, e.g. window title and about dialog
-
-application.title=Arbil (pretesting)
-
-# Application branch:
-#	Either -pretesting, -testing, or -stable
-
-application.branch=-pretesting
-
-####################################
 # Application information
 ####################################
 
@@ -30,7 +12,7 @@ application.longDescription=Arbil is an application for arranging research mater
                             http://www.lat-mpi.eu/tools/imdi/Arbil/
 
 ####################################
-# File locations
+# Locations
 ####################################
 # application basedir relative to the installer
 application.baseDir=../
