--- a/arbil/src/main/resources/version.properties
+++ b/arbil/src/main/resources/version.properties
@@ -1,8 +1,9 @@
 application.title=${arbil.application-title}
-application.iconName=arbil${arbil.branch}128x128.png
+application.iconName=arbil-${arbil.branch}128x128.png
 application.majorVersion=${arbil.majorVersion}
 application.minorVersion=${arbil.minorVersion}
 application.revision=${arbil.version.revision}
 application.lastCommitDate=${arbil.version.committedDate}
 application.compileDate=${arbil.build-date}
-application.currentVersionFile=http://www.mpi.nl/tg/j2se/jnlp/arbil/arbil${arbil.branch}-current.txt
+application.currentVersionFile=http://www.mpi.nl/tg/j2se/jnlp/arbil/arbil-${arbil.branch}-current.txt
+application.branch=${arbil.branch}
