New version of ImageMagick as 'windows utility' property for new generic desktop installer

--- a/arbil/application.properties
+++ b/arbil/application.properties
@@ -23,3 +23,5 @@ application.baseDir=../
 application.iconsDir=src/main/resources/nl/mpi/arbil/resources/icons/
 # location of mpi.keystore file, relative to the application baseDir
 mpi.keystorelocation=../../../trunk/cert/mpi.keystore
+
+application.winUtilsLocation=http://www.mpi.nl/tg/j2se/jnlp/arbil/lib/arbil-winutils.zip
