--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -111,7 +111,7 @@
 		<executions>
 		    <execution>
 			<id>copy-dependencies</id>
-			<phase>package</phase>
+			<phase>compile</phase>
 			<goals>
 			    <goal>copy-dependencies</goal>
 			</goals>
