--- a/arbil/application.properties
+++ b/arbil/application.properties
@@ -6,10 +6,18 @@ application.name=arbil
 
 application.mainClass=nl.mpi.arbil.ArbilMain
 
+# Target java version (e.g. 1.5+)
+application.javaVersion=1.5+
+
 application.shortDescription=Arbil is an application for arranging research material and associated metadata into a format appropriate for archiving.
 application.longDescription=Arbil is an application for arranging research material and associated metadata into a format appropriate for archiving.  Arbil is designed so that it can be used off line in remote locations. The data can be entered at any stage in part or as a whole. When an internet connection is available the work can then be transferred to the main archive via Lamus.\
                             \
                             http://www.lat-mpi.eu/tools/imdi/Arbil/
+
+####################################
+# Distribution
+####################################
+application.jnlp.heapSize=1073741824
 
 ####################################
 # Locations
@@ -24,4 +32,6 @@ application.iconsDir=src/main/resources/nl/mpi/arbil/resources/icons/
 # location of mpi.keystore file, relative to the application baseDir
 mpi.keystorelocation=../../../trunk/cert/mpi.keystore
 
+# zip at the following URI contains a portable distribution of ImageMagick that has to be included in the Windows installer
 application.winUtilsLocation=http://www.mpi.nl/tg/j2se/jnlp/arbil/lib/arbil-winutils.zip
+application.todoListLocation=https://trac.mpi.nl/query?status=accepted&status=assigned&status=new&status=reopened&component=Arbil&format=csv&max=1000&col=id&col=summary&order=summary
