--- a/arbil/application.properties
+++ b/arbil/application.properties
@@ -13,11 +13,20 @@ application.shortDescription=Arbil is an application for arranging research mate
 application.longDescription=Arbil is an application for arranging research material and associated metadata into a format appropriate for archiving.  Arbil is designed so that it can be used off line in remote locations. The data can be entered at any stage in part or as a whole. When an internet connection is available the work can then be transferred to the main archive via Lamus.\
                             \
                             http://www.lat-mpi.eu/tools/imdi/Arbil/
+application.maintainer.name=Peter Withers
+application.maintainer.email=Peter.Withers@mpi.nl
 
 ####################################
 # Distribution
 ####################################
 application.jnlp.heapSize=1073741824
+
+application.debian.dependends=sun-java5-jre | sun-java6-jre | openjdk-7-jre, ffmpeg, imagemagick
+application.debian.section=science
+
+# zip at the following URI contains a portable distribution of ImageMagick that has to be included in the Windows installer
+application.winUtilsLocation=http://www.mpi.nl/tg/j2se/jnlp/arbil/lib/arbil-winutils.zip
+application.todoListLocation=https://trac.mpi.nl/query?status=accepted&status=assigned&status=new&status=reopened&component=Arbil&format=csv&max=1000&col=id&col=summary&order=summary
 
 ####################################
 # Locations
@@ -31,7 +40,3 @@ application.baseDir=../
 application.iconsDir=src/main/resources/nl/mpi/arbil/resources/icons/
 # location of mpi.keystore file, relative to the application baseDir
 mpi.keystorelocation=../../../trunk/cert/mpi.keystore
-
-# zip at the following URI contains a portable distribution of ImageMagick that has to be included in the Windows installer
-application.winUtilsLocation=http://www.mpi.nl/tg/j2se/jnlp/arbil/lib/arbil-winutils.zip
-application.todoListLocation=https://trac.mpi.nl/query?status=accepted&status=assigned&status=new&status=reopened&component=Arbil&format=csv&max=1000&col=id&col=summary&order=summary
