Added a comment indicating how "arbil.version.revision" is populated.

--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -140,6 +140,7 @@
 		    <entries>
 			<entry>
 			    <path>${basedir}/src/main</path>
+                            <!-- this will populate "arbil.version.revision" -->
 			    <prefix>arbil.version</prefix>
 			</entry>
 		    </entries>
