--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>nl.mpi</groupId>
     <artifactId>arbil</artifactId>
     <packaging>jar</packaging>
-    <version>2.3-TESTING</version>
+    <version>2.3</version>
     <name>Arbil</name>
     <organization> 
 	<name>The Language Archive</name> 
