Updated to the latest Arbil version and made the changes required for the bug catcher modifications. Reverted a change that was made to the ArbilIcons class so that the application icon property has its full icon path included, such that the code remains application independent.

--- a/arbil/src/main/resources/version.properties
+++ b/arbil/src/main/resources/version.properties
@@ -1,5 +1,5 @@
 application.title=${arbil.application-title}
-application.iconName=arbil-${arbil.branch}128x128.png
+application.iconName=/nl/mpi/arbil/resources/icons/arbil-${arbil.branch}128x128.png
 application.majorVersion=${arbil.majorVersion}
 application.minorVersion=${arbil.minorVersion}
 application.revision=${arbil.version.revision}
