--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
 	<url>http://www.lat-mpi.eu/</url>
     </organization>
     <scm>
-		<developerConnection>scm:svn:https://svn.mpi.nl/LAT/Arbil/trunk/arbil</developerConnection>
-    	 <url>https://trac.mpi.nl/wiki/Arbil</url>
+	<developerConnection>scm:svn:https://svn.mpi.nl/LAT/Arbil/trunk/arbil</developerConnection>
+	<url>https://trac.mpi.nl/wiki/Arbil</url>
     </scm>
     <properties>
 	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -83,7 +83,7 @@
 	<dependency>
 	    <groupId>nl.mpi</groupId>
 	    <artifactId>typechecker</artifactId>
-	    <version>1.6.4</version>
+	    <version>1.6.5</version>
 	</dependency>
 	<dependency>
 	    <groupId>nl.nikhef</groupId>
@@ -95,11 +95,11 @@
 	    <artifactId>imdi-api</artifactId>
 	    <version>1.1.2</version>
 	</dependency>
-        <dependency>
-            <groupId>nl.mpi</groupId>
-            <artifactId>mpi-util</artifactId>
-            <version>1.0.0</version>
-        </dependency>	
+	<dependency>
+	    <groupId>nl.mpi</groupId>
+	    <artifactId>mpi-util</artifactId>
+	    <version>1.0.0</version>
+	</dependency>	
 	<dependency>
 	    <groupId>junit</groupId>
 	    <artifactId>junit</artifactId>
@@ -108,13 +108,8 @@
 	</dependency>
 	<dependency>
 	    <groupId>net.sf.saxon</groupId>
-	    <artifactId>saxon</artifactId>
-	    <version>8.7</version>
-	</dependency>
-	<dependency>
-	    <groupId>net.sf.saxon</groupId>
-	    <artifactId>saxon-dom</artifactId>
-	    <version>8.7</version>
+	    <artifactId>Saxon-HE</artifactId>
+	    <version>9.4</version>
 	</dependency>
 	<dependency>
 	    <groupId>xerces</groupId>
@@ -136,11 +131,11 @@
 	    <artifactId>log4j</artifactId>
 	    <version>1.2.16</version>
 	</dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>corpusstructure-api</artifactId>
-            <version>1.7.3</version>
-        </dependency>
+	<dependency>
+	    <groupId>${project.groupId}</groupId>
+	    <artifactId>corpusstructure-api</artifactId>
+	    <version>1.7.3</version>
+	</dependency>
     </dependencies>
     <repositories>
 	<repository>
@@ -148,38 +143,42 @@
 	    <name>MPI LAT Repository</name>
 	    <url>http://lux15.mpi.nl/nexus/content/groups/public/</url>
 	</repository>
+	<repository>
+	    <id>sonatype</id>
+	    <url>https://oss.sonatype.org/content/groups/public</url>
+	</repository>
     </repositories>
-<reporting>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-report-plugin</artifactId>
-        <version>2.7.2</version>
-        <configuration>
-                <forkMode>never</forkMode>
-            <argLine>-Dwt.headless</argLine>
-            <argLine>-Djava.awt.headless=true</argLine>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jxr-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>findbugs-maven-plugin</artifactId>
-        <configuration>
-          <findbugsXmlOutput>True</findbugsXmlOutput>
-          <threshold>Normal</threshold>
-          <effort>Min</effort>
-        </configuration>
-      </plugin>
-    </plugins>
-  </reporting>
+    <reporting>
+	<plugins>
+	    <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-surefire-report-plugin</artifactId>
+		<version>2.7.2</version>
+		<configuration>
+		    <forkMode>never</forkMode>
+		    <argLine>-Dwt.headless</argLine>
+		    <argLine>-Djava.awt.headless=true</argLine>
+		</configuration>
+	    </plugin>
+	    <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-jxr-plugin</artifactId>
+	    </plugin>
+	    <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-javadoc-plugin</artifactId>
+	    </plugin>
+	    <plugin>
+		<groupId>org.codehaus.mojo</groupId>
+		<artifactId>findbugs-maven-plugin</artifactId>
+		<configuration>
+		    <findbugsXmlOutput>True</findbugsXmlOutput>
+		    <threshold>Normal</threshold>
+		    <effort>Min</effort>
+		</configuration>
+	    </plugin>
+	</plugins>
+    </reporting>
 
 
 </project>
