--- a/arbil/application.properties
+++ b/arbil/application.properties
@@ -39,4 +39,5 @@ application.baseDir=../
 # location of icons directory, relative to the application baseDir
 application.iconsDir=src/main/resources/nl/mpi/arbil/resources/icons/
 # location of mpi.keystore file, relative to the application baseDir
-mpi.keystorelocation=../../../trunk/cert/mpi.keystore
+mpi.keystorelocation=../../../cert/mpi.keystore
+mpi.keyname=lat-mpg
