Moved imgscalr-maven-plugin to /trunk directory where it belongs, and added it to modules in parent pom

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
   <modules>
     <module>arbil</module>
     <module>arbil-wicket</module>
+    <module>imgscalr-maven-plugin</module>
   </modules>
 
   <scm>
