--- a/src/main/java/start-arbil.template
+++ b/src/main/java/start-arbil.template
@@ -4,4 +4,5 @@ exec java \
 	-classpath "$BASEDIR/arbil-@ArbilVersionNumber@.jar:$BASEDIR/lib" \
 	-Xdock:name="@ApplicationTitle@" \
         -Xdock:icon="$BASEDIR/../Resources/arbil@FilenameIdentifier@.icns" \
+        -Xmx1024m \
 	nl.mpi.arbil.ArbilMain
