--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -245,6 +245,11 @@
 	    <artifactId>corpusstructure-api</artifactId>
 	    <version>1.7.3</version>
 	</dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>kinnate-plugins-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <repositories>
 	<repository>
