--- a/arbil-wicket/pom.xml
+++ b/arbil-wicket/pom.xml
@@ -99,6 +99,11 @@
             <artifactId>arbil</artifactId>
             <version>2.5-pretesting-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>nl.mpi</groupId>
+            <artifactId>kinnate-plugins-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
 	<resources>
