Added the plugins menu to Arbil. refs #2233

--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -250,6 +250,11 @@
             <artifactId>kinnate-plugins-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>nl.mpi</groupId>
+            <artifactId>pluginloader</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <repositories>
 	<repository>
