Added a unit test that restricts the risk of human error in the maven build process and matching the correct build number. refs #2339

--- a/arbil/src/main/resources/version.properties
+++ b/arbil/src/main/resources/version.properties
@@ -7,3 +7,4 @@ application.lastCommitDate=${arbil.version.committedDate}
 application.compileDate=${arbil.build-date}
 application.currentVersionFile=http://www.mpi.nl/tg/j2se/jnlp/arbil/arbil-${arbil.branch}-current.txt
 application.branch=${arbil.branch}
+application.projectVersion=${project.version}
